@@ -65,118 +65,6 @@
 				</plugins>
 			</build>
 		</profile>
-		<profile>
-			<id>jdk8</id>
-			<!-- <activation> -->
-			<!-- <jdk>1.8</jdk> -->
-			<!-- </activation> -->
-			<properties>
-				<maven.compiler.source>1.8</maven.compiler.source>
-				<maven.compiler.target>1.8</maven.compiler.target>
-				<java.version>1.8</java.version>
-			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<excludes>
-								<exclude>**/module-info.java</exclude>
-							</excludes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk9+</id>
-			<!-- <activation> -->
-			<!-- include future version, so that we don't have to apply the pluginManagement settings multiple times -->
-			<!-- <jdk>[1.9,)</jdk> -->
-			<!-- </activation> -->
-			<properties>
-				<maven.compiler.source>1.9</maven.compiler.source>
-				<maven.compiler.target>1.9</maven.compiler.target>
-				<java.version>1.9</java.version>
-			</properties>
-			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-compiler-plugin</artifactId>
-							<!-- <configuration> -->
-							<!-- <compilerArgs> -->
-							<!-- <arg> -->
-							<!-- -XDcompilePolicy=simple -->
-							<!-- -Xplugin:ErrorProne -->
-							<!-- </arg> -->
-							<!-- </compilerArgs> -->
-							<!-- <annotationProcessorPaths> -->
-							<!-- <path> -->
-							<!-- <groupId>com.google.errorprone</groupId> -->
-							<!-- <artifactId>error_prone_core</artifactId> -->
-							<!-- <version>2.3.2</version> -->
-							<!-- </path> -->
-							<!-- </annotationProcessorPaths> -->
-							<!-- </configuration> -->
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-surefire-plugin</artifactId>
-							<configuration>
-								<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-failsafe-plugin</artifactId>
-							<configuration>
-								<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>com.github.spotbugs</groupId>
-							<artifactId>spotbugs-maven-plugin</artifactId>
-							<configuration>
-								<jvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</jvmArgs>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-maven-plugin</artifactId>
-							<configuration>
-								<jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
-							</configuration>
-						</plugin>
-					</plugins>
-				</pluginManagement>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk10</id>
-			<!-- <activation> -->
-			<!-- <jdk>10</jdk> -->
-			<!-- </activation> -->
-			<properties>
-				<maven.compiler.source>10</maven.compiler.source>
-				<maven.compiler.target>10</maven.compiler.target>
-				<java.version>10</java.version>
-			</properties>
-		</profile>
-		<profile>
-			<id>jdk11+</id>
-			<!-- <activation> -->
-			<!-- <jdk>[11,)</jdk> -->
-			<!-- </activation> -->
-			<properties>
-				<!-- java 11 cannot leads to a lot of errors, so we stay on 10 for now -->
-				<maven.compiler.source>10</maven.compiler.source>
-				<maven.compiler.target>10</maven.compiler.target>
-				<java.version>10</java.version>
-			</properties>
-		</profile>
 
 	</profiles>
 
